# qiskit-certification-prep

./: .gitignore  README.md  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: sample.ipynb  sec1_quantum-operations.ipynb  sec2_visualization.ipynb  sec3_quantum-circuit.ipynb  sec4_run-quantum-circuit.ipynb  sec5-6_sampler-estimator.ipynb  sec5_sampler.ipynb  sec7_retrieve-and-analyze.ipynb  sec8_openqasm3.ipynb
